Trees added as obstacles and game ends with winner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Ironhack Commute - The Game</h1>
     <input type="text" class="player" id="p1" placeholder="Player 1">
     <button id="startGame">Start Game</button>
-    <button id="pausa" class="hide">Pausa</button>
+    <button id="pausa" class="hide">Pausa (P)</button>
     <button id="restart" class="hide">Restart</button>
     <input type="text" class="player" id="p2" placeholder="Player 2">
     <canvas id="myCanvas" width="1024" height="512"></canvas>
